代码检测 修复